--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -36,7 +36,7 @@
 
   height: var(--search-height);
   margin: 0 8px;
-  padding-left: 12px;
+  padding-left: calc(var(--search-height) / 2);
   border-radius: 999px;
   background: rgba(22, 24, 35, 0.06);
 
@@ -89,16 +89,15 @@
 }
 .actions {
   display: inline-flex;
+  align-items: center;
 }
 
-.search-result {
-  margin-top: 8px;
-  padding-top: 8px;
-  max-height: min((100vh - 96px) - 60px, 734px);
-  overflow: hidden auto;
-  background: rgb(255, 255, 255);
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 12px;
+.more-btn {
+  width: 20px;
+  height: 20px;
+  margin-left: 16px;
+  padding: 0 4px;
+  cursor: pointer;
 }
 
 .search-title {
