--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -87,9 +87,25 @@
     background-color: rgba(22, 24, 35, 0.06);
   }
 }
+
+.icon {
+  margin-left: 16px;
+  background-color: transparent;
+  width: 36px;
+  height: 36px;
+}
+
 .actions {
   display: inline-flex;
   align-items: center;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+  margin-left: 24px;
+  border-radius: 999px;
+  cursor: pointer;
 }
 
 .more-btn {
