--- a/src/components/GlobalStyle/GlobalStyle.module.scss
+++ b/src/components/GlobalStyle/GlobalStyle.module.scss
@@ -4,11 +4,15 @@
 }
 
 :root {
-  font-family: "Proxima", "Arial";
+  --font-family: "Proxima", "Arial";
+
+  font-family: var(--font-family);
 
   --primary: rgba(254, 44, 85, 1);
   --black: #000000;
   --white: #fff;
+
+  --default-layout-width: 1150px;
 }
 
 * {
@@ -23,6 +27,21 @@ html {
 
 body {
   font-size: 1.6rem;
+  overflow-y: overlay;
+}
+
+//Scrollbar
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, 0.06);
+}
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 input,
