--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -3,20 +3,24 @@
   --search-button-width: 52px;
   --search-button-font-size: 1.8rem;
 
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: center;
   height: 60px;
+  width: 100%;
+  background-color: var(--white);
 }
 .inner {
   padding: 0 20px;
-  width: 1150px;
+  width: var(--default-layout-width);
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid grey;
 }
 .logo {
-  width: 300px;
+  width: 118px;
 
   img {
     width: 118px;
