--- a/src/layouts/components/Header/SearchItem/SearchItem.module.scss
+++ b/src/layouts/components/Header/SearchItem/SearchItem.module.scss
@@ -24,6 +24,7 @@
   font-size: 1.6rem;
   line-height: 2.2rem;
   font-weight: 600;
+  color: var(--black);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
