--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -13,7 +13,8 @@
 }
 .inner {
   padding: 0 20px;
-  width: var(--default-layout-width);
+  max-width: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
