--- a/src/layouts/components/Header/Search/Search.module.scss
+++ b/src/layouts/components/Header/Search/Search.module.scss
@@ -9,7 +9,8 @@
   align-items: center;
   height: var(--search-height);
   margin: 0 8px;
-  padding-left: calc(var(--search-height) / 2);
+  padding-left: calc(var(--search-height) / 2 - 5px);
+
   border-radius: 999px;
   border: 1px solid transparent;
   font-family: var(--font-family);
@@ -22,8 +23,10 @@
   input {
     flex: 1;
     height: 100%;
+    padding-right: 45px;
     background-color: transparent;
     caret-color: var(--primary);
+    font-size: 1.6rem;
 
     &:not(:placeholder-shown) ~ .search-btn {
       color: rgba(22, 24, 35, 0.75);
